--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -54,11 +54,11 @@
 <body>
     <div id="pg1">
         <h1>Brookfield Zoo Page 1:</h1>
-        <img src="./adobe_xd/Web 1920 – 1.jpg" alt="Page 1 Wire-Frame">
+        <img src="./adobe_xd/Pg1.jpg" alt="Page 1 Wire-Frame">
     </div>
     <div id="pg2">
         <h1>Brookfield Zoo Page 2:</h1>
-        <img src="./Web 1920 – 1.jpg" alt="Page 2 Wire-Frame">
+        <img src="./adobe_xd/Pg2.jpg" alt="Page 2 Wire-Frame">
     </div>
     <div id="us">
         <h1 style="text-align: center;">How to make the site easier to load:</h1>
