Last Update to Lab 2

--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--
+    Tyler Noble
+    Date: March 4th 2021
+-->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
